--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <!-- Metadatos y recursos externos -->
-    <meta charset="UTF-8"> <!-- Especifica la codificación de caracteres para el documento -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Asegura un escalado adecuado en dispositivos móviles -->
-    <title>Formulario Nexus</title> <!-- Título de la página web -->
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS externo para estilos -->
+  <!-- Metadatos del documento -->
+  <meta charset="UTF-8"> <!-- Especifica la codificación de caracteres -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajuste responsivo en dispositivos móviles -->
+  <title>Formulario Nexus - Acordeón Real</title> <!-- Título de la pestaña -->
+  <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS con los estilos -->
 </head>
-<body>
-<div class="container">
-    <!-- Navegación del paso a paso del formulario -->
-    <div class="stepper">
-        <div class="step active" data-step="1">1</div> <!-- Paso 1: Activo por defecto -->
-        <div class="step" data-step="2">2</div> <!-- Paso 2 -->
-        <div class="step" data-step="3">3</div> <!-- Paso 3 -->
+<body> 
+<div class="container"> <!-- Contenedor principal centrado -->
+  
+  <!-- Navegación visual del proceso en tres pasos -->
+  <div class="stepper">
+    <div class="step active" data-step="1">1</div> <!-- Paso 1: activo por defecto -->
+    <div class="step" data-step="2">2</div> <!-- Paso 2 -->
+    <div class="step" data-step="3">3</div> <!-- Paso 3 -->
+  </div>
+
+  <div class="accordion"> <!-- Contenedor del formulario tipo acordeón -->
+
+    <!-- Paso 1: Información personal -->
+    <div class="accordion-section active" id="step-1"> <!-- Sección activa por defecto -->
+      <div class="accordion-header">Datos personales</div> <!-- Encabezado visible de la sección -->
+      <div class="accordion-content"> <!-- Contenido expandible -->
+
+        <input type="text" placeholder="Nombre completo" required> <!-- Campo de entrada para el nombre -->
+        <input type="email" placeholder="Correo electrónico" required> <!-- Campo de entrada para el email -->
+
+        <fieldset>
+          <legend>Sexo:</legend> <!-- Leyenda para agrupar los radio buttons -->
+          <div class="radio-group">
+            <label><input type="radio" name="sexo" value="masculino" required>Masculino</label> <!-- Opción masculina -->
+            <label><input type="radio" name="sexo" value="femenino" required>Femenino</label> <!-- Opción femenina -->
+            <label><input type="radio" name="sexo" value="prefiero-no-informar" required>Prefiero no informar</label> <!-- Opción neutral -->
+          </div>
+        </fieldset>
+
+        <label for="birthdate">Fecha de nacimiento:</label> <!-- Etiqueta para el input tipo fecha -->
+        <input type="date" id="birthdate" required> <!-- Campo para seleccionar fecha -->
+
+        <button onclick="nextStep(2)">Continuar</button> <!-- Botón para avanzar al paso 2 -->
+      </div>
     </div>
 
-    <div class="accordion">
-        <!-- Paso 1: Información personal -->
-        <div class="accordion-section active" id="step-1">
-            <h2>Datos personales</h2> <!-- Título de la sección -->
-            <input type="text" placeholder="Nombre completo" required> <!-- Campo de entrada para el nombre completo -->
-            <input type="email" placeholder="Correo electrónico" required> <!-- Campo de entrada para el correo electrónico -->
-            <fieldset>
-                <legend>Sexo:</legend> <!-- Etiqueta del grupo para la selección de género -->
-                <label>
-                    <input type="radio" name="sexo" value="masculino" required> Masculino <!-- Botón de opción para "Masculino" -->
-                </label>
-                <label>
-                    <input type="radio" name="sexo" value="femenino" required> Femenino <!-- Botón de opción para "Femenino" -->
-                </label>
-                <label>
-                    <input type="radio" name="sexo" value="prefiero-no-informar" required> Prefiero no informar <!-- Botón de opción para "Prefiero no informar" -->
-                </label>
-            </fieldset>
-            <label for="birthdate">Fecha de nacimiento:</label> <!-- Etiqueta para el selector de fecha -->
-            <input type="date" id="birthdate" required> <!-- Selector de fecha para la fecha de nacimiento -->
-            <button onclick="nextStep(2)">Continuar</button> <!-- Botón para avanzar al siguiente paso -->
-        </div>
-
-        <!-- Paso 2: Información de envío -->
-        <div class="accordion-section" id="step-2">
-            <h2>Datos de envío</h2> <!-- Título de la sección -->
-            <input type="text" placeholder="Dirección" required> <!-- Campo de entrada para la dirección -->
-            <input type="text" placeholder="Ciudad" required> <!-- Campo de entrada para la ciudad -->
-            <button onclick="nextStep(3)">Continuar</button> <!-- Botón para avanzar al siguiente paso -->
-        </div>
-        <div class="accordion-section" id="step-3">
-            <h2>Datos de pago</h2> <!-- Título de la sección -->
-            <input type="text" placeholder="Nombre como figura en la tarjeta" required> <!-- Campo de entrada para el nombre del titular de la tarjeta -->
-            <input type="text" placeholder="Número de tarjeta" required> <!-- Campo de entrada para el número de tarjeta -->
-            <input type="text" placeholder="Fecha de vencimiento" required> <!-- Campo de entrada para la fecha de vencimiento de la tarjeta -->
-            <label for="card-type">Tipo de tarjeta:</label> <!-- Etiqueta para la selección del tipo de tarjeta -->
-            <select id="card-type" required> <!-- Menú desplegable para el tipo de tarjeta -->
-                <option value="debito">Débito</option> <!-- Opción para tarjeta de débito -->
-                <option value="credito">Crédito</option> <!-- Opción para tarjeta de crédito -->
-            </select>
-            <button>Finalizar</button> <!-- Botón para finalizar el formulario -->
-        </div>
+    <!-- Paso 2: Información de envío -->
+    <div class="accordion-section" id="step-2">
+      <div class="accordion-header">Datos de envío</div> <!-- Encabezado de la sección -->
+      <div class="accordion-content"> <!-- Contenido expandible del paso 2 -->
+        <input type="text" placeholder="Dirección" required> <!-- Campo para ingresar dirección -->
+        <input type="text" placeholder="Ciudad" required> <!-- Campo para ingresar ciudad -->
+        <button onclick="nextStep(3)">Continuar</button> <!-- Botón para avanzar al paso 3 -->
+      </div>
     </div>
+
+    <!-- Paso 3: Información de pago -->
+    <div class="accordion-section" id="step-3">
+      <div class="accordion-header">Datos de pago</div> <!-- Encabezado de la sección -->
+      <div class="accordion-content"> <!-- Contenido expandible del paso 3 -->
+        <input type="text" placeholder="Nombre como figura en la tarjeta" required> <!-- Nombre en la tarjeta -->
+        <input type="text" placeholder="Número de tarjeta" required> <!-- Número de la tarjeta -->
+        <input type="text" placeholder="Fecha de vencimiento" required> <!-- Fecha de expiración -->
+        
+        <label for="card-type">Tipo de tarjeta:</label> <!-- Etiqueta para el desplegable -->
+        <select id="card-type" required> <!-- Selector de tipo de tarjeta -->
+          <option value="debito">Débito</option> <!-- Opción para tarjeta de débito -->
+          <option value="credito">Crédito</option> <!-- Opción para tarjeta de crédito -->
+        </select>
+
+        <button>Finalizar</button> <!-- Botón para cerrar el formulario (sin funcionalidad real) -->
+      </div>
+    </div>
+  </div>
 </div>
 
-<script src="index.js"></script> <!-- Enlace al archivo JavaScript externo -->
+<script src="index.js"></script> <!-- Enlace al script JavaScript para la lógica del formulario -->
 </body>
 </html>
