--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Metadatos del documento -->
   <meta charset="UTF-8"> <!-- Especifica la codificación de caracteres -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajuste responsivo en dispositivos móviles -->
-  <title>Formulario Nexus - Acordeón Real</title> <!-- Título de la pestaña -->
+  <title>Formulario Nexus</title> <!-- Título de la pestaña -->
   <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS con los estilos -->
 </head>
 <body> 
