fix radio buttons error

--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
           <legend>Sexo:</legend> <!-- Leyenda para agrupar los radio buttons -->
           <div class="radio-group">
             <label><input type="radio" name="sexo" value="masculino" required>Masculino</label>
-            <!-- Opción masculina -->
-            <label><input type="radio" name="sexo" value="femenino" required>Femenino</label> <!-- Opción femenina -->
+            <label><input type="radio" name="sexo" value="femenino" required>Femenino</label>
             <label><input type="radio" name="sexo" value="prefiero-no-informar" required>Prefiero no informar</label>
-            <!-- Opción neutral -->
           </div>
         </fieldset>
-        <!-- Mensaje de error para el grupo de radios -->
         <span class="error-text"></span>
 
         <label class="birthdate">Fecha de nacimiento:</label> <!-- Etiqueta para el input tipo fecha -->
